# Message-Queues

./: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h  MessageQueueClient.cpp  MessageQueueClient.h  MessageQueueServer.cpp  MessageQueueServer.h  MessageQueueSubscriber.cpp  MessageQueueSubscriber.h  server_main.cpp  subscriber_main.cpp
